--- a/.github/workflows/skip.yml
+++ b/.github/workflows/skip.yml
@@ -1,4 +1,4 @@
-name: "Test behaviour of success()"
+name: skip
 on: [push,workflow_dispatch]
 
 jobs:
@@ -20,6 +20,7 @@ jobs:
     needs:
       - always-skipped
       - always-success
+    if: true
     steps:
       - shell: bash
         run: echo "What happens here"
