--- a/.github/workflows/skip.yml
+++ b/.github/workflows/skip.yml
@@ -20,7 +20,7 @@ jobs:
     needs:
       - always-skipped
       - always-success
-    if: true
+    if: "!(failure() || cancelled())"
     steps:
       - shell: bash
         run: echo "What happens here"
