--- a/.github/workflows/skip.yml
+++ b/.github/workflows/skip.yml
@@ -21,7 +21,7 @@ jobs:
       - always-skipped
       - always-success
 #     if: "!(failure() || cancelled())"
-    if: false
+    if: true
     steps:
       - shell: bash
         run: echo "What happens here"
