--- a/.github/workflows/requiredstatus.yml
+++ b/.github/workflows/requiredstatus.yml
@@ -1,6 +1,9 @@
 name: requiredjobskip
 on:
   workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 jobs:
   test-fail-job:
     runs-on: ubuntu-latest
