--- a/.github/workflows/needs.yml
+++ b/.github/workflows/needs.yml
@@ -13,13 +13,13 @@ jobs:
   job2:
     runs-on: ubuntu-latest
     needs: job1
-    if: ${{ needs.job1.outputs.output1 }} == 'hello'
+    if: ${{ needs.job1.outputs.output1 == 'hello' }} 
     steps:
       - run: echo "${{needs.job1.outputs.output1}}"
   job3:
     runs-on: ubuntu-latest
     needs: job1
-    if: ${{ needs.job1.outputs.output1 }} != 'hello'
+    if: ${{ needs.job1.outputs.output1 != 'hello' }} 
     steps:
       - run: echo "I won't run"
      
