--- a/.github/workflows/needs.yml
+++ b/.github/workflows/needs.yml
@@ -1,6 +1,9 @@
 name: needsandif
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - main
   
 jobs:
   job1:
@@ -13,7 +16,7 @@ jobs:
   job2:
     runs-on: ubuntu-latest
     needs: job1
-    if: ${{ needs.job1.outputs.output1 == 'hello' }} 
+    if: ${{ needs.job1.outputs.output1 == 'hello' }} && (github.event_name == 'push' || github.event_name == 'pull_request')
     steps:
       - run: echo "${{needs.job1.outputs.output1}}"
   job3:
