--- a/.github/workflows/needs.yml
+++ b/.github/workflows/needs.yml
@@ -16,7 +16,7 @@ jobs:
   job2:
     runs-on: ubuntu-latest
     needs: job1
-    if: ${{ needs.job1.outputs.output1 != 'hello' }} && (github.event_name == 'push' || github.event_name == 'pull_request')
+    if: ${{ needs.job1.outputs.output1 != 'hello'  && (github.event_name == 'push' || github.event_name == 'pull_request') }}
     steps:
       - run: echo "${{needs.job1.outputs.output1}}"
   job3:
